--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swagger-ui-react": "^5.18.2"
+    "swagger-ui-react": "^5.18.2",
+    "tailwindcss": "3.4.16"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "@types/swagger-ui-react": "^4.18.3"
+    "typescript": "5.7.3"
   }
 }
