--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.9",
-    "@vercel/postgres": "^0.10.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
+    "@tailwindcss/forms": "0.5.9",
+    "@vercel/postgres": "0.10.0",
+    "bcrypt": "5.1.1",
+    "jsonwebtoken": "9.0.2",
     "next": "15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "swagger-ui-react": "^5.18.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swagger-ui-react": "5.18.2",
     "tailwindcss": "3.4.16"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.8",
+    "@types/bcrypt": "5.0.2",
+    "@types/jsonwebtoken": "9.0.8",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "@types/swagger-ui-react": "^4.18.3",
-    "eslint": "^9",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@types/swagger-ui-react": "4.18.3",
+    "eslint": "9",
     "eslint-config-next": "15.1.4",
     "typescript": "5.7.3"
   }
