--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "2.2.0",
     "@tailwindcss/forms": "0.5.9",
     "@vercel/postgres": "0.10.0",
     "bcrypt": "5.1.1",
@@ -17,6 +18,7 @@
     "next": "15.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "5.10.0",
     "swagger-ui-react": "5.18.2",
     "tailwindcss": "3.4.16"
   },
