--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@eslint/eslintrc": "3.3.1",
     "@heroicons/react": "2.2.0",
     "@tailwindcss/forms": "0.5.9",
     "@vercel/postgres": "0.10.0",
@@ -23,6 +24,7 @@
     "tailwindcss": "3.4.16"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "15.3.1",
     "@types/bcrypt": "5.0.2",
     "@types/jsonwebtoken": "9.0.8",
     "@types/node": "22.10.1",
@@ -31,6 +33,7 @@
     "@types/swagger-ui-react": "4.18.3",
     "eslint": "9",
     "eslint-config-next": "15.1.4",
+    "eslint-plugin-react-hooks": "5.2.0",
     "typescript": "5.7.3"
   }
 }
